--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,26 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: "14.x"
-    - name: Insalacja dependencji
+    - name: Instalacja dependencji
       run: npm install
     - name: Uruchomienie testów
       run: npm test
+  deploy: 
+    runs-on: ubuntu-latest
+    steps:
+    - name: Step 1
+      uses: actions/checkout@v2
+    - name: Step 2
+      uses: actions/appservice-build@v3
+      with:
+        platform: nodejs
+        platform-version: 14.21.3
+    - name: Wdrożenie aplikacji do Azue App Service
+      uses: azure/webapps-deploy@v1
+      with:
+        app-name: cwiczenie6
+        publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE }}
+    
     
     
   
