--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,12 @@ jobs:
       run: npm test
   deploy: 
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
     - name: Step 1
       uses: actions/checkout@v2
     - name: Step 2
-      uses: actions/appservice-build@v3
+      uses: azure/appservice-build@v3
       with:
         platform: nodejs
         platform-version: 14.21.3
